--- a/5/5s/5st/5star-shareware.com.html
+++ b/5/5s/5st/5star-shareware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 5star-shareware.com privacy policy that was archived on 2013-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130611122914id_/http%3A//www.5star-shareware.com/docs/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 5star-shareware.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220183853id_/http%3A//www.5star-shareware.com/docs/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy policy | 5 Star Shareware</title>
@@ -20,7 +20,7 @@
 <td align="center" id="banner">
 <script type="text/javascript"><!--
 getBannerAd("Windows")
-//--></script><a href="/Windows/Games/Platform/turtle_odyssey.html"><img src="/images/ads/odyssey-turtle.gif" border="0" width="468" height="60" alt="Turtle Odyssey"></a>
+//--></script><a href="/Windows/Desktop/SaverCreate/assb.html"><img src="/images/ads/activescreensaverbuilder.gif" border="0" width="468" height="60" alt="Active ScreenSaver Builder"></a>
 </td>
 <td align="right"></td>
 </tr>
