--- a/y/ye/yes/yessy.com.html
+++ b/y/ye/yes/yessy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yessy.com privacy policy that was archived on 2013-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130610180511id_/http%3A//yessy.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yessy.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220184449id_/http%3A//www.yessy.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Yessy &gt; Privacy Policy</title>
