--- a/p/pr/pro/progarchives.com.html
+++ b/p/pr/pro/progarchives.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the progarchives.com privacy policy that was archived on 2013-05-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130510220244id_/http%3A//www.progarchives.com/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the progarchives.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220194206id_/http%3A//www.progarchives.com/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -13,14 +13,14 @@
 <!-- META KEYWORDS -->
 <meta name="keywords" content="Progarchives.com Privacy Policy, progressive rock, prog rock, prog archives, prog archive, progarchive, free mp3, reviews, music, albums, forum, community, videos, auctions, cd, lp, dvd">
 
-<link rel="stylesheet" href="static-css/screen.css?v=6">
+<link rel="stylesheet" href="static-css/screen.css?v=7">
 
 
 
 <!-- Facebook Open Graph Protocol -->
 
 <meta property="og:site_name" content="Progarchives.com">
-<meta property="fb:app_id" content="120674537963164">
+<meta property="fb:admins" content="546882990">
 
 
 
@@ -39,21 +39,6 @@
 </script>
 
 
-<!-- Google Ad Manager HEAD tag -->
-<script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js"></script>
-<script type="text/javascript">
-GS_googleAddAdSenseService("ca-pub-0447992028883143");
-GS_googleEnableAllServices();
-</script>
-<script type="text/javascript">
-GA_googleAddSlot("ca-pub-0447992028883143", "progarchives_site_homepage_box_300x250");
-GA_googleAddSlot("ca-pub-0447992028883143", "progarchives_site_sky_160x600");
-GA_googleAddSlot("ca-pub-0447992028883143", "progarchives_site_top_728x90");
-</script>
-<script type="text/javascript">
-GA_googleFetchAds();
-</script>
-<!-- END OF TAG Google Ad Manager HEAD tag -->
 <meta name="verify-v1" content="gekxcnV9VQ1H7apKp4Geh+BYZ8obt1RE26pabGvprpE=">
 <meta name="google-site-verification" content="7zi8CAxLZW3Z8s4rVL0Bw-3YfQ60x_tENsOo0U7rdpM">
 
@@ -306,108 +291,108 @@ window.google_analytics_uacct = "UA-579843-1";
 <ul>
 <li><span style="font-weight:bold;color:white">POPULAR ARTISTS (TOP 50, LAST 24H) :</span></li>
 
-<li><a href="artist.asp?id=549">Nektar</a></li>
+<li><a href="artist.asp?id=2542">Frost*</a></li>
 
-<li><a href="artist.asp?id=1969">Deep Purple</a></li>
+<li><a href="artist.asp?id=8543">Echoes Of Giants</a></li>
+
+<li><a href="artist.asp?id=8591">Sunrise Auranaut</a></li>
 
 <li><a href="artist.asp?id=105">Yes</a></li>
 
-<li><a href="artist.asp?id=288">Pendragon</a></li>
-
-<li><a href="artist.asp?id=7576">Twin Beaks</a></li>
-
-<li><a href="artist.asp?id=50">Camel</a></li>
-
-<li><a href="artist.asp?id=2634">Various Artists (Concept albums &amp; Themed compilations)</a></li>
-
 <li><a href="artist.asp?id=191">King Crimson</a></li>
-
-<li><a href="artist.asp?id=320">Spock's Beard</a></li>
-
-<li><a href="artist.asp?id=8028">Oceans of Slumber</a></li>
-
-<li><a href="artist.asp?id=1">Genesis</a></li>
-
-<li><a href="artist.asp?id=290">Porcupine Tree</a></li>
-
-<li><a href="artist.asp?id=1694">Willowglass</a></li>
-
-<li><a href="artist.asp?id=1321">Ekseption</a></li>
 
 <li><a href="artist.asp?id=233">Marillion</a></li>
 
-<li><a href="artist.asp?id=1295">Tangerine Dream</a></li>
-
-<li><a href="artist.asp?id=364">Pink Floyd</a></li>
-
-<li><a href="artist.asp?id=7867">Telergy</a></li>
-
-<li><a href="artist.asp?id=343">Van Der Graaf Generator</a></li>
-
-<li><a href="artist.asp?id=1023">Frank Zappa</a></li>
-
-<li><a href="artist.asp?id=4135">Steven Wilson</a></li>
-
-<li><a href="artist.asp?id=8035">Lobate Scarp</a></li>
-
-<li><a href="artist.asp?id=1670">Comedy Of Errors</a></li>
+<li><a href="artist.asp?id=1">Genesis</a></li>
 
 <li><a href="artist.asp?id=378">Dream Theater</a></li>
 
-<li><a href="artist.asp?id=6710">Bolus</a></li>
+<li><a href="artist.asp?id=364">Pink Floyd</a></li>
 
-<li><a href="artist.asp?id=94">Emerson Lake &amp; Palmer</a></li>
-
-<li><a href="artist.asp?id=655">Barclay James  Harvest</a></li>
-
-<li><a href="artist.asp?id=6548">Temple Of The Smoke</a></li>
+<li><a href="artist.asp?id=50">Camel</a></li>
 
 <li><a href="artist.asp?id=609">Rush</a></li>
 
-<li><a href="artist.asp?id=8031">Baron</a></li>
+<li><a href="artist.asp?id=2197">Syndone</a></li>
 
-<li><a href="artist.asp?id=603">Renaissance</a></li>
+<li><a href="artist.asp?id=290">Porcupine Tree</a></li>
 
-<li><a href="artist.asp?id=165">IQ</a></li>
+<li><a href="artist.asp?id=450">Magenta</a></li>
 
-<li><a href="artist.asp?id=2797">Lost World</a></li>
+<li><a href="artist.asp?id=1258">Taproban</a></li>
 
-<li><a href="artist.asp?id=3253">Black Sabbath</a></li>
+<li><a href="artist.asp?id=7832">Oniric Project</a></li>
 
-<li><a href="artist.asp?id=405">Big Big Train</a></li>
+<li><a href="artist.asp?id=6021">Theater Of The Absurd</a></li>
 
-<li><a href="artist.asp?id=7972">Falling Edge</a></li>
+<li><a href="artist.asp?id=337">Transatlantic</a></li>
 
 <li><a href="artist.asp?id=418">Jethro Tull</a></li>
 
-<li><a href="artist.asp?id=7524">Lumerians</a></li>
+<li><a href="artist.asp?id=1023">Frank Zappa</a></li>
 
-<li><a href="artist.asp?id=855">Amon Düül II</a></li>
+<li><a href="artist.asp?id=6639">Mars Red Sky</a></li>
 
-<li><a href="artist.asp?id=839">Mike Oldfield</a></li>
+<li><a href="artist.asp?id=110">The Flower Kings</a></li>
 
-<li><a href="artist.asp?id=1287">Riverside</a></li>
+<li><a href="artist.asp?id=961">Birth Control</a></li>
 
 <li><a href="artist.asp?id=118">Gentle Giant</a></li>
 
-<li><a href="artist.asp?id=646">Magma</a></li>
+<li><a href="artist.asp?id=343">Van Der Graaf Generator</a></li>
 
-<li><a href="artist.asp?id=3790">David Bowie</a></li>
+<li><a href="artist.asp?id=782">Steve Hackett</a></li>
 
-<li><a href="artist.asp?id=8039">The Analogue</a></li>
+<li><a href="artist.asp?id=8123">Sound Horizon</a></li>
 
-<li><a href="artist.asp?id=8038">Soma White</a></li>
+<li><a href="artist.asp?id=63">Cliffhanger</a></li>
 
-<li><a href="artist.asp?id=4059">Jupiter Society</a></li>
+<li><a href="artist.asp?id=1969">Deep Purple</a></li>
 
-<li><a href="artist.asp?id=27">Arena</a></li>
+<li><a href="artist.asp?id=1295">Tangerine Dream</a></li>
 
-<li><a href="artist.asp?id=2543">Believe</a></li>
+<li><a href="artist.asp?id=2634">Various Artists (Concept albums &amp; Themed compilations)</a></li>
 
-<li><a href="artist.asp?id=119">Timothy Pure</a></li>
+<li><a href="artist.asp?id=95">Eloy</a></li>
+
+<li><a href="artist.asp?id=165">IQ</a></li>
+
+<li><a href="artist.asp?id=613">Caravan</a></li>
+
+<li><a href="artist.asp?id=289">Premiata Forneria Marconi (PFM)</a></li>
+
+<li><a href="artist.asp?id=94">Emerson Lake &amp; Palmer</a></li>
+
+<li><a href="artist.asp?id=1105">Procol Harum</a></li>
+
+<li><a href="artist.asp?id=1038">Anathema</a></li>
+
+<li><a href="artist.asp?id=82">Discipline</a></li>
+
+<li><a href="artist.asp?id=6967">Edison's Children</a></li>
+
+<li><a href="artist.asp?id=8587">Solar Soma</a></li>
+
+<li><a href="artist.asp?id=732">Hawkwind</a></li>
+
+<li><a href="artist.asp?id=405">Big Big Train</a></li>
+
+<li><a href="artist.asp?id=766">Rick Wakeman</a></li>
+
+<li><a href="artist.asp?id=381">Vanden Plas</a></li>
+
+<li><a href="artist.asp?id=655">Barclay James  Harvest</a></li>
+
+<li><a href="artist.asp?id=8592">Habelard2</a></li>
+
+<li><a href="artist.asp?id=686">Peter Gabriel</a></li>
+
+<li><a href="artist.asp?id=3027">Year of No Light</a></li>
+
+<li><a href="artist.asp?id=129">Glass Hammer</a></li>
 
 </ul>
-<!-- Application("popartists_cachetime") = 5/10/2013 5:00:00 PM -->
+<!-- Application("popartists_cachetime") = 12/20/2013 1:00:00 PM -->
 
 
 <ul>
@@ -469,7 +454,7 @@ window.google_analytics_uacct = "UA-579843-1";
 	<!--
 	document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5110/1294397/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 	//-->
-	</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5110/1294397/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1582332652821"></script><noscript><a href="http://adserver.adtechus.com/adlink/3.0/5110/1294397/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://adserver.adtechus.com/adserv/3.0/5110/1294397/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
+	</script><script language="javascript1.1" src="http://adserver.adtechus.com/addyn/3.0/5110/1294397/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1582332657000"></script><noscript><a href="http://adserver.adtechus.com/adlink/3.0/5110/1294397/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://adserver.adtechus.com/adserv/3.0/5110/1294397/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
 	<!-- End of JavaScript Tag -->	
 	
 </div>
@@ -732,7 +717,8 @@ Copyright Prog Archives, All rights reserved. | <a href="Legalnotice.asp"><font 
 Server processing time: 0.00 seconds
 </p>
 
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=progarchives.com"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=progarchives.com"></script>
+
 
 
 
